--- a/src/app/avaliation/evaluation/evaluation.component.html
+++ b/src/app/avaliation/evaluation/evaluation.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <app-header-name></app-header-name>
     <div class="section">
-        <h1>Dados Complementares</h1>
+        <h1 class="h1-title">Dados Complementares</h1>
         <form #f="ngForm" (submit)="save(f.value)">
             <table class="section-table">
                 <thead>
