--- a/src/app/dashboard/dash/dash.component.scss
+++ b/src/app/dashboard/dash/dash.component.scss
@@ -97,11 +97,7 @@
 
 @media only screen and (min-width: 768px) {
   .dash-form {
-    width: 50%;
+    width: 425px;
   }
 }
-@media only screen and (min-width: 1024px) {
-  .dash-form {
-    width: 30%;
-  }
-}
+
