--- a/src/app/avaliation/anamenese/anamenese.component.scss
+++ b/src/app/avaliation/anamenese/anamenese.component.scss
@@ -19,25 +19,24 @@
     justify-content: flex-start !important;
     align-items: center !important;
 
-    h1 {
-      margin-top: 80px;
-      width: 100%;
-      height: 60px;
-      background-color: rgba(119, 107, 107, 0.788);
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 30px;
-      text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
-    }
+
   }
 }
 
 .mat-accordion {
   width: 100%;
 }
+
+.mat-action-row{
+  width: 90%;
+  margin: auto;
+  display: inline-flex;
+  justify-content: flex-end;
+}
 ::ng-deep {
+  .mat-expansion-panel:not(.mat-expanded):not([aria-disabled=true]) .mat-expansion-panel-header:hover {
+      background: unset;
+  }
   .mat-expansion-panel {
     background-color: rgba(119, 107, 107, 0.788);
     margin-bottom: 3px !important;
@@ -86,6 +85,7 @@
   }
 
   .mat-stroked-button:not([disabled]) {
+    width: 97px;
     border-color: white;
     color: white;
   }
@@ -177,7 +177,7 @@
   }
 
   .mat-accordion {
-    width: 1005 !important;
+    width: 100% !important;
   }
   .mat-card {
     width: 440px !important;
