--- a/src/app/avaliation/componente-morfologica/im/im.component.scss
+++ b/src/app/avaliation/componente-morfologica/im/im.component.scss
@@ -1,6 +1,25 @@
+  .container{
+    background-color: white;
+    background-image: unset;
+  }
+  
   .section{
+    width: 100%;
+    display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start !important;
+    align-items: center;
+
+    .h1-title{
+      width: 100%;
+      height: 30px;
+      font-size: 20px;
+      margin-top: 10px !important;
+    }
+  }
+
+  form{
+    width: 100%;
   }
 
   .section-info{
@@ -11,6 +30,7 @@
     align-items: center;
 
     h4{
+      font-size: 12px;
       font-weight: 600;
       text-decoration: underline;
     }
@@ -25,6 +45,10 @@
   }
   
   @media only screen and (min-width: 768px){
+    form{
+      width: 90%;
+      margin: auto;
+    }
     .section-info{
       width: 64%;
     }
