--- a/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
+++ b/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
@@ -1,9 +1,7 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n>IC - Índice de Conicidade</h1>
-    </div>
-
+    <app-header-name></app-header-name>
     <div class="section">
+        <h1 class="h1-title" i18n>IC - Índice de Conicidade</h1>
         <form class="section-form" #f="ngForm" (submit)="save(f.value)">
             <table class="section-table">
                 <thead>
@@ -62,17 +60,17 @@
                     (click)="pointer=pointer-1">
                     <mat-icon class="mat-14">chevron_left</mat-icon>
                 </button>
-                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                     <mat-icon class="mat-18">add</mat-icon>
                 </button>
                 <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1" mat-mini-fab color="default"
                     (click)="pointer=pointer+1">
                     <mat-icon class="mat-14">chevron_right</mat-icon>
                 </button>
-                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                     <mat-icon class="mat-18">close</mat-icon>
                 </button>
-                <button *ngIf="addEval" mat-fab>
+                <button *ngIf="addEval" mat-stroked-button>
                     <mat-icon class="mat-18">check</mat-icon>
                 </button>
             </div>
@@ -86,9 +84,4 @@
         
     </div>
 
-    <div class="footer">
-        <a mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </a>
-    </div>
 </div>
