--- a/src/app/avaliation/componente-morfologica/ircq/ircq.component.html
+++ b/src/app/avaliation/componente-morfologica/ircq/ircq.component.html
@@ -1,9 +1,8 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n>Índice de Relação Cintura/Quadril</h1>
-    </div>
+    <app-header-name></app-header-name>
 
     <div class="section">
+        <h1 class="h1-title" i18n>Índice de Relação Cintura/Quadril</h1>
         <table class="section-table">
             <thead>
                 <tr>
@@ -149,11 +148,5 @@
             <em>Fonte: Heyward. V. & Stolarkcyz. Applied Body Composition Assessment, 1996</em>
         </div>
 
-    </div>
-
-    <div class="footer">
-        <a mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </a>
     </div>
 </div>
