--- a/src/app/avaliation/componente-morfologica/pdc/pdc.component.scss
+++ b/src/app/avaliation/componente-morfologica/pdc/pdc.component.scss
@@ -1,4 +1,42 @@
+.container{
+  background-color: white;
+  background-image: unset;
+
+  app-header-name{
+    width: 100%;
+  }
+}
+
 .section{
   flex-direction: column;
   justify-content: start;
+
+  .h1-title {
+    margin-top: 10px;
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
+  }
+}
+
+::ng-deep {
+  .mat-stroked-button {
+    width: 56px;
+    height: 56px;
+  }
+  .mat-stroked-button:not([disabled]) {
+    border-color: rgb(37, 36, 36);
+  }
+  .mat-stroked-button:not([disabled]):hover {
+    border-color: rgb(37, 36, 36);
+    background-color: rgba(245, 245, 245, 0.555);
+  }
+}
+
+
+@media only screen and (min-width: 768px) {
+  .mat-tab-group{
+    width: 90%;
+    margin: auto;
+  }
 }
