--- a/src/app/avaliation/composicao-corporal/cc.component.scss
+++ b/src/app/avaliation/composicao-corporal/cc.component.scss
@@ -1,10 +1,201 @@
 .container {
+  background-color: rgb(8, 123, 138);
   background-image: url("./../../../assets/img/dobras1.jpg");
   background-repeat: no-repeat;
-  background-blend-mode: normal;
+  background-blend-mode: hard-light;
   background-size: cover;
   background-position: center;
+
+  app-header-name {
+    width: 100%;
+  }
+
+  .section {
+    width: 100%;
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
+
+    h1 {
+      margin-top: 80px;
+      width: 100%;
+      height: 60px;
+      background-color: rgba(119, 107, 107, 0.788);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 30px;
+      text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
+    }
+  }
 }
+
+.mat-accordion {
+  width: 100%;
+}
+::ng-deep {
+  .mat-expansion-panel:not(.mat-expanded):not([aria-disabled=true]) .mat-expansion-panel-header:hover {
+      background: unset;
+  }
+  .mat-expansion-panel {
+    background-color: rgba(119, 107, 107, 0.788);
+    margin-bottom: 3px !important;
+    border-radius: unset;
+  }
+  .mat-expansion-panel-header-title {
+    color: white;
+  }
+  .mat-expansion-panel-header-description,
+  .mat-expansion-indicator::after {
+    color: white;
+  }
+
+  .mat-select-value {
+    color: whitesmoke !important;
+  }
+  .mat-select-value-text {
+    color: whitesmoke !important;
+  }
+  .mat-form-field-appearance-legacy .mat-form-field-underline {
+    background-color: white;
+  }
+  .mat-card {
+    background-color: transparent;
+    color: white;
+  }
+  .mat-expansion-panel-content {
+    background-color: rgba(119, 107, 107, 0.1788);
+  }
+
+  .mat-card-subtitle {
+    text-align: left;
+    color: white;
+  }
+
+  .mat-checkbox-frame,
+  .mat-radio-outer-circle {
+    border-color: white;
+  }
+
+  .mat-form-field-appearance-legacy .mat-form-field-label {
+    color: white !important;
+  }
+  label{
+    color: whitesmoke;
+  }
+
+  .mat-stroked-button:not([disabled]) {
+    border-color: white;
+    color: white;
+  }
+  .mat-stroked-button:not([disabled]):hover {
+    border-color: white;
+    background-color: rgba(245, 245, 245, 0.555);
+  }
+  .mat-tab-label{
+    color: white;
+  }
+  .mat-select-arrow {
+    color: unset;
+  }
+}
+
+.check-box {
+  margin-bottom: 20px;
+}
+
+.mat-checkbox {
+  display: flex;
+  flex-direction: row;
+  white-space: nowrap;
+  width: 240px;
+  margin: auto;
+  font-size: small;
+}
+
+.mat-label {
+  display: block;
+}
+
+.mat-tab-group {
+  width: 100%;
+}
+
+.escalas {
+  display: flex;
+  flex-direction: column;
+}
+
+.mat-radio-button {
+  display: inline;
+  // margin: 5px;
+}
+.mat-checkbox-layout {
+  white-space: normal !important;
+}
+
+.mat-radio-label {
+  white-space: normal !important;
+  padding-bottom: 10px !important;
+  padding-right: 5px !important;
+}
+
+.wrap-label {
+  white-space: break-spaces;
+  font-size: small;
+}
+
+.patologico {
+  .mat-radio-button {
+    display: inline-block;
+    margin-left: 20px;
+    font-size: unset;
+  }
+
+  .mat-input {
+    width: 96%;
+  }
+}
+
+.input-lg {
+  width: 100%;
+  margin: auto;
+}
+
+.input-sm {
+  width: 60px;
+  margin-left: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .section {
+    width: 520px !important;
+    h1 {
+      width: 100%;
+      height: 60px;
+    }
+  }
+
+  .mat-accordion {
+    width: 100% !important;
+  }
+  .mat-card {
+    width: 440px !important;
+    margin: auto;
+  }
+  ::ng-deep .mat-tab-header-pagination {
+    display: none !important;
+  }
+
+  ::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+  }
+}
+
+/* }
 .section{
   flex-direction: column;
   justify-content: start;
@@ -40,3 +231,5 @@ mat-expansion-panel-body {
   color: rgba(97, 98, 98, 0.804);
   text-align: center;
 }
+ */
+
