--- a/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
+++ b/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n>Todas as Dobras</h1>
-    </div>
+    <app-header-name></app-header-name>
     <div class="section">
+        <h1 class="h1-title" i18n>Todas as Dobras</h1>
         <form #f="ngForm" (submit)="save(f.value)">
             <input type="hidden"  name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
             <input type="hidden"  name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
@@ -144,17 +143,17 @@
                     (click)="pointer=pointer-1">
                     <mat-icon class="mat-14">chevron_left</mat-icon>
                 </button>
-                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                     <mat-icon class="mat-18">add</mat-icon>
                 </button>
                 <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
                     mat-mini-fab color="default" (click)="pointer=pointer+1">
                     <mat-icon class="mat-14">chevron_right</mat-icon>
                 </button>
-                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                     <mat-icon class="mat-18">close</mat-icon>
                 </button>
-                <button *ngIf="addEval" mat-fab>
+                <button *ngIf="addEval" mat-stroked-button>
                     <mat-icon class="mat-18">check</mat-icon>
                 </button>
             </div>
@@ -166,27 +165,6 @@
             <h4 style="text-align: center; color: blue;">
                 {{selectedEvaluation.data | date:'dd/LL/yyyy'}}
             </h4>
-<!--             <div style="text-align: center; color: blue;">
-                <mat-label i18n>% Gordura desejada <small>[{{gorduraDesejada}}]</small>: </mat-label>
-                <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
-                    [disabled]="!fatChanged" (change)="getNewEvaluation()">
-                </mat-slider>
-                <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
-                    <mat-icon>edit</mat-icon>
-                </button>
-                <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
-                    <mat-icon>save</mat-icon>
-                </button>
-            </div> -->
-
-    <!--         <app-chart-pie [values]="single"></app-chart-pie>
-            <app-chart-pie [values]="single2"></app-chart-pie> -->
         </div>
-    </div>
-
-    <div class="footer">
-        <a mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </a>
     </div>
 </div>
