--- a/src/app/avaliation/dobras/jp7/jp7.component.html
+++ b/src/app/avaliation/dobras/jp7/jp7.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-    <div class="header">
-        <h3 i18n>Jackson & Pollock - 7 dobras</h3>
-    </div>
+    <app-header-name></app-header-name>
     <div class="section">
+        <h1 class="h1-title" i18n>Jackson & Pollock - 7 dobras</h1>
         <form #f="ngForm" (submit)="save(f.value)">
             <input type="hidden"  name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
             <input type="hidden"  name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
@@ -130,17 +129,17 @@
                     (click)="pointer=pointer-1">
                     <mat-icon class="mat-14">chevron_left</mat-icon>
                 </button>
-                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                     <mat-icon class="mat-18">add</mat-icon>
                 </button>
                 <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
                     mat-mini-fab color="default" (click)="pointer=pointer+1">
                     <mat-icon class="mat-14">chevron_right</mat-icon>
                 </button>
-                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                     <mat-icon class="mat-18">close</mat-icon>
                 </button>
-                <button *ngIf="addEval" mat-fab>
+                <button *ngIf="addEval" mat-stroked-button>
                     <mat-icon class="mat-18">check</mat-icon>
                 </button>
             </div>
