--- a/src/app/avaliation/dobras/sloan/sloan.component.scss
+++ b/src/app/avaliation/dobras/sloan/sloan.component.scss
@@ -1,4 +1,46 @@
-  .section {
-    flex-direction: column;
-    justify-content: start;
+.container{
+  background-color: white;
+  background-image: unset;
+}
+
+.section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  .h1-title{
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
+    margin-top: 10px !important;
   }
+
+  form{
+    width: 100%;
+  }
+}
+
+
+::ng-deep {
+  .mat-stroked-button {
+    width: 56px;
+    height: 56px;
+  }
+  .mat-stroked-button:not([disabled]) {
+    border-color: rgb(37, 36, 36);
+  }
+  .mat-stroked-button:not([disabled]):hover {
+    border-color: rgb(37, 36, 36);
+    background-color: rgba(245, 245, 245, 0.555);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  form{
+    width: 90% !important;
+    margin: auto;
+  }
+}
+
