--- a/src/app/avaliation/evaluation/evaluation.component.scss
+++ b/src/app/avaliation/evaluation/evaluation.component.scss
@@ -20,22 +20,14 @@
     margin-top: 40px;
     width: 100%;
     height: 70px;
-    background-color: rgba(119, 107, 107, 0.788);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
   }
 }
 
 form {
+  width: 100%;
   display: flex;
   flex-direction: column;
   background-color: rgba(119, 107, 107, 0.788);
-  width: 425px;
-  padding: 15px;
   color: white;
 }
 
