--- a/src/app/avaliation/risco/qpaf/qpaf.component.html
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.html
@@ -2,7 +2,7 @@
     <app-header-name></app-header-name>
 
     <div class="section">
-        <h1 i18n>Questionário PAR-Q</h1>
+        <h1 class="h1-title" i18n>Questionário PAR-Q</h1>
         <form class="flex-form" #f="ngForm" (submit)="save(f.value)">
             <mat-card>
                 <mat-card-content>
