--- a/src/app/avaliation/risco/qpaf/qpaf.component.scss
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.scss
@@ -15,6 +15,11 @@
         flex-direction: column;
         justify-content: flex-start;
         color: white;
+
+        .h1-title{
+            margin-top: 40px;
+            font-size: 30px;
+        }
     }
 }
 
@@ -22,18 +27,6 @@ app-header-name {
     width: 100%;
 }
 
-h1 {
-    margin-top: 40px;
-    width: 100%;
-    height: 70px;
-    background-color: rgba(119, 107, 107, 0.788);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
-}
 
 .mat-card {
     width: 100%;
