--- a/src/app/avaliation/risco/rdc/rdc.component.scss
+++ b/src/app/avaliation/risco/rdc/rdc.component.scss
@@ -17,19 +17,14 @@
         justify-content: flex-start !important;
         align-items: center !important;
     
-        h1 {
+        .h1-title {
           margin-top: 30px;
-          width: 100%;
-          height: 40px;
-          background-color: rgba(119, 107, 107, 0.788);
-          color: white;
-          display: flex;
-          justify-content: center;
-          align-items: center;
           font-size: 16px;
-          text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
-        }
 
+        }
+        form{
+          width: 100%;
+        }
         .mat-card{
             width: 100%;
             background-color: rgba(119, 107, 107, 0.788);
